[gd_scene load_steps=3 format=3 uid="uid://ddw8eu16j846s"]

[ext_resource type="Script" uid="uid://diae7ykr3dla2" path="res://script/main.gd" id="1_cm0pq"]
[ext_resource type="PackedScene" uid="uid://bqc3ohy41gaxm" path="res://scene/character_body_2d.tscn" id="4_lgr22"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cm0pq")

[node name="MainCharacter" parent="." instance=ExtResource("4_lgr22")]
position = Vector2(136, 240)

[node name="CharacterBody2D2" parent="." instance=ExtResource("4_lgr22")]
position = Vector2(1296, 240)

[node name="Label_level" type="Label" parent="."]
layout_mode = 0
offset_left = 136.0
offset_right = 200.0
offset_bottom = 23.0

[node name="Label_name" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.006278252
anchor_right = 0.037669513
anchor_bottom = 0.033377834
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="Label_name"]
layout_mode = 0
offset_right = 39.963837
offset_bottom = 24.0

[node name="Label_gold" type="Label" parent="."]
layout_mode = 0
offset_left = 1240.0
offset_right = 1280.0
offset_bottom = 24.0
horizontal_alignment = 2
autowrap_mode = 2
